# lakehouse_project

./: .gitignore  README.md  nx.json  package-lock.json  package.json  pyproject.toml
study_first_project/: api_request.py  docker-compose.yml  insert_records.py  study_first_project_README.md
study_first_project/airflow/: docker-file  requirements.txt
study_first_project/airflow/dags/: orchestrator.py
study_first_project/api_request/: insert_records.py
study_first_project/dbt/: .user.yml
study_first_project/dbt/my_project/: .user.yml  profiles.yml
study_first_project/dbt/my_project/models/sources/: bronze_cotacao_data.sql  silver_cotacao.sql  sources.yml
study_first_project/metabase-data/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
