[tool.poetry]
name = "lakehouse-workspace"
version = "0.1.0"
description = ""
authors = ["pedro Caroli <pedrocaroli3001@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
